# cxlib

./: Cargo.toml
crates/: README.md
crates/base/: Cargo.toml
crates/base/src/: course.rs  lib.rs  location.rs  photo.rs
crates/cxlib_activity/: Cargo.toml
crates/cxlib_activity/src/: lib.rs  raw.rs
crates/cxlib_activity/src/protocol/: active_list.rs
crates/cxlib_captcha/: Cargo.toml
crates/cxlib_captcha/src/: captcha_type.rs  hash.rs  lib.rs  protocol.rs  solver.rs  utils.rs  verification_info.rs
crates/cxlib_default_impl/: Cargo.toml
crates/cxlib_default_impl/src/: lib.rs  protocol.rs
crates/cxlib_default_impl/src/sign/: gesture.rs  location.rs  mod.rs  normal.rs  photo.rs  qrcode.rs  signcode.rs  utils.rs
crates/cxlib_default_impl/src/sign/protocol/: mod.rs  sign_detail.rs
crates/cxlib_default_impl/src/signner/: mod.rs  utils.rs
crates/cxlib_default_impl/src/signner/impls/: gesture_or_signcode.rs  location.rs  mod.rs  normal_or_raw.rs  photo.rs  qrcode.rs  utils.rs
crates/cxlib_default_impl/src/store/: mod.rs
crates/cxlib_default_impl/src/store/table/: account_table.rs  alias_table.rs  exclude_table.rs  kv_config_table.rs  location_table.rs  mod.rs  utils.rs
crates/cxlib_dir/: Cargo.toml
crates/cxlib_dir/src/: lib.rs
crates/cxlib_error/: Cargo.toml
crates/cxlib_error/src/: activity_error.rs  captcha_error.rs  course_error.rs  lib.rs  login_error.rs  new_types.rs  protocol_error.rs  sign_error.rs  store_error.rs
crates/cxlib_imageproc/: Cargo.toml
crates/cxlib_imageproc/src/: lib.rs  map.rs  utils.rs
crates/cxlib_internal/: Cargo.toml
crates/cxlib_internal/src/: lib.rs
crates/cxlib_login/: Cargo.toml
crates/cxlib_login/src/: lib.rs  utils.rs
crates/cxlib_obfuscate/: Cargo.toml
crates/cxlib_obfuscate/src/: lib.rs
crates/cxlib_pan/: Cargo.toml
crates/cxlib_pan/src/: protocol.rs
crates/cxlib_protocol/: Cargo.toml  README.md
crates/cxlib_protocol/src/: default_impl.rs  lib.rs  multipart.rs  utils.rs
crates/cxlib_protocol/src/collect/: captcha.rs  mod.rs  unused.rs  user.rs
crates/cxlib_protocol/src/collect/activity/: active_list.rs
crates/cxlib_protocol/src/collect/default_impl/: mod.rs
crates/cxlib_protocol/src/collect/default_impl/sign/: sign_detail.rs
crates/cxlib_protocol/src/collect/sign/: analysis.rs  check_signcode.rs  get_attend_info.rs  ppt_sign.rs  pre_sign.rs
crates/cxlib_protocol/src/collect/types/: back_clazz_data.rs  get_location_log.rs  pan.rs
crates/cxlib_qrcode_utils/: Cargo.toml
crates/cxlib_qrcode_utils/src/: lib.rs
crates/cxlib_sign/: Cargo.toml
crates/cxlib_sign/src/: lib.rs  utils.rs
crates/cxlib_sign/src/protocol/: analysis.rs  check_signcode.rs  get_attend_info.rs  mod.rs  ppt_sign.rs  pre_sign.rs
crates/cxlib_signner/: Cargo.toml
crates/cxlib_signner/src/: lib.rs
crates/cxlib_store/: Cargo.toml
crates/cxlib_store/src/: lib.rs
crates/cxlib_types/: Cargo.toml
crates/cxlib_types/src/: course.rs  dioption.rs  lib.rs  location.rs  photo.rs
crates/cxlib_types/src/protocol/: back_clazz_data.rs  get_location_log.rs  mod.rs
crates/cxlib_unused/: Cargo.toml
crates/cxlib_user/: Cargo.toml
crates/cxlib_user/src/: cookies.rs  lib.rs  login.rs  protocol.rs  session.rs
crates/cxlib_utils/: Cargo.toml
crates/cxlib_utils/src/: date_time.rs  debug.rs  encode.rs  imageproc.rs  interact.rs  lib.rs  qrcode.rs
crates/cxsign_activity/: Cargo.toml
crates/cxsign_activity/src/: lib.rs  raw.rs
crates/cxsign_activity/src/protocol/: active_list.rs  get_attend_info.rs  mod.rs  ppt_sign.rs
crates/cxsign_activity/src/sign/: gesture.rs  location.rs  mod.rs  normal.rs  photo.rs  qrcode.rs  raw.rs  signcode.rs
crates/cxsign_activity/src/utils/: mod.rs
crates/cxsign_captcha/: Cargo.toml
crates/cxsign_captcha/src/: hash.rs  protocol.rs  utils.rs
crates/cxsign_default_impl/: Cargo.toml
crates/cxsign_default_impl/src/: lib.rs  utils.rs
crates/cxsign_default_impl/src/cx_protocol/: mod.rs
crates/cxsign_default_impl/src/sign/: gesture.rs  location.rs  mod.rs  normal.rs  photo.rs  qrcode.rs  signcode.rs  utils.rs
crates/cxsign_default_impl/src/sign/protocol/: check_signcode.rs  sign_detail.rs
crates/cxsign_default_impl/src/signner/: location.rs  mod.rs  qrcode.rs  utils.rs
crates/cxsign_default_impl/src/signner/impls/: gesture_or_signcode.rs  location.rs  normal_or_raw.rs  photo.rs  qrcode.rs
crates/cxsign_default_impl/src/store/: mod.rs
crates/cxsign_default_impl/src/store/table/: account_table.rs  alias_table.rs  exclude_table.rs  kv_config_table.rs  location_table.rs  mod.rs
crates/cxsign_default_impl/src/utils/: mod.rs
crates/cxsign_dir/: Cargo.toml
crates/cxsign_dir/src/: lib.rs
crates/cxsign_error/src/: lib.rs
crates/cxsign_imageproc/: Cargo.toml
crates/cxsign_internal/: Cargo.toml
crates/cxsign_internal/src/: lib.rs
crates/cxsign_login/: Cargo.toml
crates/cxsign_obfuscate/: Cargo.toml
crates/cxsign_pan/: Cargo.toml
crates/cxsign_protocol/: Cargo.toml  README.md
crates/cxsign_protocol/src/: default_impl.rs  lib.rs
crates/cxsign_qrcode_utils/: Cargo.toml
crates/cxsign_qrcode_utils/src/: lib.rs  protocol.rs
crates/cxsign_sign/: Cargo.toml
crates/cxsign_sign/src/: lib.rs  utils.rs
crates/cxsign_sign/src/protocol/: analysis.rs  get_attend_info.rs  ppt_sign.rs  pre_sign.rs
crates/cxsign_signner/: Cargo.toml
crates/cxsign_signner/src/: lib.rs  utils.rs
crates/cxsign_signner/src/default/: gesture_or_signcode.rs  location.rs  normal_or_raw.rs  photo.rs  qrcode.rs
crates/cxsign_store/: Cargo.toml
crates/cxsign_types/: Cargo.toml
crates/cxsign_types/src/: course.rs  dioption.rs  lib.rs  location.rs  triple.rs
crates/cxsign_types/src/protocol/: back_clazz_data.rs  get_location_log.rs  mod.rs
crates/cxsign_types/src/store/: course.rs  location.rs
crates/cxsign_user/: Cargo.toml
crates/cxsign_utils/: Cargo.toml
crates/login/: Cargo.toml
crates/login/src/: lib.rs  protocol.rs  utils.rs
crates/login/src/protocol/: login_enc.rs  login_page.rs  mod.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  (+1 more)
src/: lib.rs
(+46 files in other folders)
