[package]
name = "cxlib_activity"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
cxlib_error = { path = "../cxlib_error" }
cxlib_protocol = { path = "../cxlib_protocol" }
#cxlib_store = { path = "../cxlib_store" }
cxlib_user = { path = "../cxlib_user" }
cxlib_utils = { path = "../cxlib_utils", features = ["date_time", "unicode_width_impl"] }
log.workspace = true
percent-encoding.workspace = true
serde = { workspace = true, features = ["derive"] }
cxlib_types = { path = "../cxlib_types" }
ureq = { workspace = true, features = ["cookies", "json"] }
