[package]
name = "cxlib_activity"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
cxlib_error = { path = "../cxlib_error" }
cxlib_protocol = { path = "../cxlib_protocol", features = ["activity"] }
cxlib_user = { path = "../cxlib_user" }
cxlib_utils = { path = "../cxlib_utils" }
log.workspace = true
serde = { workspace = true, features = ["derive"] }
cxlib_types = { path = "../cxlib_types" }
