[package]
name = "cxlib_captcha"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxlib_error = { path = "../cxlib_error" }
cxlib_obfuscate = { path = "../cxlib_obfuscate" }
cxlib_protocol = { path = "../cxlib_protocol" }
cxlib_utils = { path = "../cxlib_utils" }
getset2.workspace = true
hex.workspace = true
image.workspace = true
log.workspace = true
onceinit.workspace = true
rand.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }
serde = { workspace = true, features = ["derive"] }
