[package]
name = "cxlib_captcha"
edition = "2021"
version.workspace = true
authors.workspace = true

[features]
slide_ui_solver = ["ui_solver"]
rotate_ui_solver = ["ui_solver"]
obstacle_ui_solver = ["ui_solver"]
icon_click_ui_solver = ["ui_solver"]
text_click_ui_solver = ["ui_solver"]
ui_solver = ["captcha_solver_ui"]

[dependencies]
yapt.workspace = true
cxlib_error = { path = "../cxlib_error" }
cxlib_imageproc = { path = "../cxlib_imageproc" }
cxlib_obfuscate = { path = "../cxlib_obfuscate" }
cxlib_protocol = { path = "../cxlib_protocol", features = ["captcha"] }
cxlib_utils = { path = "../cxlib_utils" }
getset2.workspace = true
hex.workspace = true
image.workspace = true
log.workspace = true
onceinit.workspace = true
rand.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }
serde = { workspace = true, features = ["derive"] }

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
captcha_solver_ui = { git = "https://github.com/worksoup/captcha_solver_ui.git", optional = true }