[package]
name = "cxlib_default_impl"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxlib_activity = { path = "../cxlib_activity" }
cxlib_error = { path = "../cxlib_error" }
cxlib_imageproc = { path = "../cxlib_imageproc" }
cxlib_protocol = { path = "../cxlib_protocol", features = ["default_impl"] }
cxlib_sign = { path = "../cxlib_sign" }
cxlib_store = { path = "../cxlib_store" }
cxlib_types = { path = "../cxlib_types" }
cxlib_user = { path = "../cxlib_user" }
cxlib_utils = { path = "../cxlib_utils" }
image.workspace = true
log.workspace = true
rxing.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlite.workspace = true
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
xcap.workspace = true