[package]
name = "cxlib_internal"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxlib_activity = { path = "../cxlib_activity" }
cxlib_captcha = { path = "../cxlib_captcha" }
cxlib_default_impl = { path = "../cxlib_default_impl" }
cxlib_dir = { path = "../cxlib_dir" }
cxlib_error = { path = "../cxlib_error" }
cxlib_imageproc = { path = "../cxlib_imageproc" }
cxlib_login = { path = "../cxlib_login" }
cxlib_pan = { path = "../cxlib_pan" }
cxlib_qrcode_utils = { path = "../cxlib_qrcode_utils" }
cxlib_sign = { path = "../cxlib_sign" }
cxlib_signner = { path = "../cxlib_signner" }
cxlib_store = { path = "../cxlib_store" }
cxlib_types = { path = "../cxlib_types" }
#cxlib_unused = { path = "../cxlib_unused" }
cxlib_user = { path = "../cxlib_user" }
cxlib_utils = { path = "../cxlib_utils" }