[package]
name = "cxlib_internal"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxlib_activity = { path = "../cxlib_activity" }
cxlib_captcha = { path = "../cxlib_captcha" }
cxlib_default_impl = { path = "../cxlib_default_impl" }
cxlib_store = { path = "../cxlib_store" }
cxlib_error = { path = "../cxlib_error" }
cxlib_sign = { path = "../cxlib_sign" }
cxlib_types = { path = "../cxlib_types" }
#cxlib_unused = { path = "../cxlib_unused" }
cxlib_user = { path = "../cxlib_user" }
cxlib_utils = { path = "../cxlib_utils" }