[package]
name = "cxlib_login"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie_store.workspace = true
cxlib_error = { path = "../cxlib_error" }
cxlib_protocol = { path = "../cxlib_protocol" }
cxlib_utils = { path = "../cxlib_utils", features = ["des_impl"] }
log = { workspace = true, features = ["release_max_level_info"] }
onceinit.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }
#hex-literal = "0.4"
