[package]
name = "cxlib_protocol"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxlib_store = { path = "../cxlib_store" }
cxlib_error = { path = "../cxlib_error" }
onceinit.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true