[package]
name = "cxlib_qrcode_utils"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxlib_imageproc = { path = "../cxlib_imageproc" }
cxlib_protocol = { path = "../cxlib_protocol" }
cxlib_utils = { path = "../cxlib_utils", features = ["inquire_impl"] }
image.workspace = true
log.workspace = true
rxing.workspace = true
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
xcap.workspace = true
