[package]
name = "cxlib_sign"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
cxlib_activity = { path = "../cxlib_activity" }
cxlib_captcha = { path = "../cxlib_captcha" }
cxlib_error = { path = "../cxlib_error" }
cxlib_protocol = { path = "../cxlib_protocol" }
#cxlib_store = { path = "../cxlib_store" }
cxlib_user = { path = "../cxlib_user" }
cxlib_utils = { path = "../cxlib_utils" }
log.workspace = true
num_enum.workspace = true
percent-encoding.workspace = true
serde = { workspace = true, features = ["derive"] }
cxlib_types = { path = "../cxlib_types" }
ureq = { workspace = true, features = ["cookies", "json"] }
