[package]
name = "cxlib_sign"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxlib_activity = { path = "../cxlib_activity" }
cxlib_captcha = { path = "../cxlib_captcha" }
cxlib_error = { path = "../cxlib_error" }
cxlib_protocol = { path = "../cxlib_protocol", features = ["sign"] }
cxlib_types = { path = "../cxlib_types" }
cxlib_user = { path = "../cxlib_user" }
log.workspace = true
num_enum.workspace = true
serde = { workspace = true, features = ["derive"] }
#terrors = "0.3"
ureq = { workspace = true, features = ["cookies", "json"] }
