[package]
name = "cxlib_user"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cookie_store.workspace = true
cxlib_dir = { path = "../cxlib_dir" }
cxlib_error = { path = "../cxlib_error" }
cxlib_login = { path = "../cxlib_login" }
cxlib_protocol = { path = "../cxlib_protocol" }
log = { workspace = true, features = ["release_max_level_info"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }