[package]
name = "cxlib_utils"
edition = "2021"
version.workspace = true
authors.workspace = true

[features]
date_time = ["chrono"]
crypto = ["zlib_impl", "des_impl"]
interact = ["unicode_width_impl", "inquire_impl"]
unicode_width_impl = ["unicode-width"]
inquire_impl = ["inquire", "log"]
des_impl = ["pkcs7_pad", "des", "hex"]
zlib_impl = ["flate2"]
pkcs7_pad = []

[dependencies]
chrono = { workspace = true, optional = true }
des = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
inquire = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
log = { workspace = true, optional = true }
unicode-width = { workspace = true, optional = true }