[package]
name = "cxlib_utils"
edition = "2021"
version.workspace = true
authors.workspace = true

[features]

[dependencies]
chrono.workspace = true
inquire.workspace = true
flate2.workspace = true
log.workspace = true
percent-encoding.workspace = true
unicode-width.workspace = true
image.workspace = true
imageproc.workspace = true
rxing.workspace = true
ureq.workspace = true
num-traits.workspace = true
