[package]
name = "cxsign_activity"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
cxsign_error = { path = "../cxsign_error" }
cxsign_protocol = { path = "../cxsign_protocol" }
#cxsign_store = { path = "../cxsign_store" }
cxsign_user = { path = "../cxsign_user" }
cxsign_utils = { path = "../cxsign_utils" }
log.workspace = true
percent-encoding.workspace = true
serde = { workspace = true, features = ["derive"] }
cxsign_types = { path = "../cxsign_types" }
ureq = { workspace = true, features = ["cookies", "json"] }
