[package]
name = "cxsign_captcha"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxsign_error = { path = "../cxsign_error" }
cxsign_imageproc = { path = "../cxsign_imageproc" }
cxsign_obfuscate = { path = "../cxsign_obfuscate" }
cxsign_protocol = { path = "../cxsign_protocol" }
hex.workspace = true
log.workspace = true
rand.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }
serde = { workspace = true, features = ["derive"] }
