[package]
name = "cxsign_default_impl"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxsign_activity = { path = "../cxsign_activity" }
cxsign_error = { path = "../cxsign_error" }
cxsign_imageproc = { path = "../cxsign_imageproc" }
cxsign_qrcode_utils = { path = "../cxsign_qrcode_utils" }
cxsign_signner = { path = "../cxsign_signner" }
cxsign_store = { path = "../cxsign_store" }
cxsign_types = { path = "../cxsign_types" }
cxsign_user = { path = "../cxsign_user" }
cxsign_utils = { path = "../cxsign_utils" }
log.workspace = true