[package]
name = "cxsign_internal"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxsign_activity = { path = "../cxsign_activity" }
cxsign_captcha = { path = "../cxsign_captcha" }
cxsign_default_impl = { path = "../cxsign_default_impl" }
cxsign_dir = { path = "../cxsign_dir" }
cxsign_error = { path = "../cxsign_error" }
cxsign_imageproc = { path = "../cxsign_imageproc" }
cxsign_login = { path = "../cxsign_login" }
cxsign_pan = { path = "../cxsign_pan" }
cxsign_qrcode_utils = { path = "../cxsign_qrcode_utils" }
cxsign_signner = { path = "../cxsign_signner" }
cxsign_store = { path = "../cxsign_store" }
cxsign_types = { path = "../cxsign_types" }
#cxsign_unused = { path = "../cxsign_unused" }
cxsign_user = { path = "../cxsign_user" }
cxsign_utils = { path = "../cxsign_utils" }