[package]
name = "cxsign_qrcode_utils"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxsign_imageproc = { path = "../cxsign_imageproc" }
cxsign_utils = { path = "../cxsign_utils" }
image.workspace = true
log.workspace = true
rxing = "0.6"
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
xcap = { version = "0.0.13" }
