[package]
name = "cxsign_sign"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
cxsign_activity = { path = "../cxsign_activity" }
cxsign_captcha = { path = "../cxsign_captcha" }
cxsign_error = { path = "../cxsign_error" }
cxsign_protocol = { path = "../cxsign_protocol" }
#cxsign_store = { path = "../cxsign_store" }
cxsign_user = { path = "../cxsign_user" }
cxsign_utils = { path = "../cxsign_utils" }
log.workspace = true
num_enum.workspace = true
percent-encoding.workspace = true
serde = { workspace = true, features = ["derive"] }
cxsign_types = { path = "../cxsign_types" }
ureq = { workspace = true, features = ["cookies", "json"] }
