[package]
name = "cxsign_signner"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cxsign_activity = { path = "../cxsign_activity" }
cxsign_error = { path = "../cxsign_error" }
cxsign_sign = { path = "../cxsign_sign" }
cxsign_types = { path = "../cxsign_types" }
cxsign_user = { path = "../cxsign_user" }