[package]
name = "cxsign_types"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxsign_dir = { path = "../cxsign_dir" }
cxsign_error = { path = "../cxsign_error" }
cxsign_pan = { path = "../cxsign_pan" }
cxsign_protocol = { path = "../cxsign_protocol" }
cxsign_user = { path = "../cxsign_user" }
log.workspace = true
onceinit.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
ureq = { workspace = true, features = ["cookies", "json"] }