[package]
name = "login"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq.worksoup = true
serde = { worksoup = true, features = ["derive"] }
serde_json.worksoup = true
cookie_store.workspace = true
